Updated the href link for the nioh 3 page in index.html. Removed all href links in nioh3.html.

--- a/nioh3/nioh3.html
+++ b/nioh3/nioh3.html
@@ -258,7 +258,7 @@
             <a class="mask w-full h-[195px] py-2 rounded flex flex-col items-center justify-between group bg-medium-red hover:bg-light-red"
                 href="">
 
-                <img src="./img/basics_icon.png" alt="">
+                <img src="" alt="">
                 <span class="text-2xl text-slate-300 group-hover:text-yellow-400">Basics</span>
             </a>
 
@@ -303,7 +303,7 @@
             <a class="mask w-full h-[195px] py-2 rounded flex flex-col items-center justify-between group bg-medium-red hover:bg-light-red"
                 href="">
 
-                <img src="./img/combat_icon.png" alt="">
+                <img src="" alt="">
                 <span class="  text-2xl text-slate-300 group-hover:text-yellow-400">Combat</span>
             </a>
 
@@ -350,9 +350,9 @@
             top row 
             ========== -->
             <a class="mask w-full h-[195px] py-2 rounded flex flex-col items-center justify-between group bg-medium-red hover:bg-light-red"
-                href="https://liukang1080.github.io/gamewiki/nioh2/equipment/equipment_index.html">
+                href="">
 
-                <img src="./img/equipment_icon.png" alt="">
+                <img src="" alt="">
                 <span class="  text-2xl text-slate-300 group-hover:text-yellow-400">Equipment</span>
             </a>
 
@@ -382,15 +382,15 @@
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
-                    href="https://liukang1080.github.io/gamewiki/nioh2/equipment/guardian_spirits/guardian_spirits.html">Guardian Spirits</a>
+                    href="">Guardian Spirits</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
-                    href="https://liukang1080.github.io/gamewiki/nioh2/equipment/picture_scrolls/picture_scrolls.html">Demon Parade Picture Scrolls</a>
+                    href="">Demon Parade Picture Scrolls</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
-                    href="https://liukang1080.github.io/gamewiki/nioh2/equipment/graces/graces.html">Graces & Sets</a>
+                    href="">Graces & Sets</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
@@ -407,9 +407,9 @@
             top row 
             ========== -->
             <a class="mask w-full h-[195px] py-2 rounded flex flex-col items-center justify-between group bg-medium-red hover:bg-light-red"
-                href="https://liukang1080.github.io/gamewiki/nioh2/world/world_index.html">
+                href="">
 
-                <img src="./img/world_icon.png" alt="">
+                <img src="" alt="">
                 <span class="text-2xl text-slate-300 group-hover:text-yellow-400">World</span>
             </a>
 
@@ -418,7 +418,7 @@
             ========== -->
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="https://liukang1080.github.io/gamewiki/nioh2/world/missions/missions_index.html">Missions</a>
+                    <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="">Missions</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="">Bosses</a>
@@ -427,7 +427,7 @@
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="">Enemies</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="https://liukang1080.github.io/gamewiki/nioh2/world/underworld/underworld_index.html">The Underworld</a>
+                    <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="">The Underworld</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="">Characters</a>
@@ -443,9 +443,9 @@
             top row 
             ========== -->
             <a class="mask w-full h-[195px] py-2 rounded flex flex-col items-center justify-between group bg-medium-red hover:bg-light-red"
-                href="https://liukang1080.github.io/gamewiki/nioh2/tools/tools_index.html">
+                href="">
 
-                <img src="./img/tools_icon.png" alt="">
+                <img src="" alt="">
                 <span class="  text-2xl text-slate-300 group-hover:text-yellow-400">Tools & Resources</span>
             </a>
 
@@ -454,10 +454,10 @@
             ========== -->
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/smithing_texts_index.html">Smithing Texts</a>
+                    <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="">Smithing Texts</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="https://liukang1080.github.io/gamewiki/nioh2/tools/temper_tables/temper_tables_index.html">Temper Tables</a>
+                    <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="">Temper Tables</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="">Blacksmith</a>
@@ -469,7 +469,7 @@
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="">Farming Resources</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="https://liukang1080.github.io/gamewiki/nioh2/tools/achievements/achievements.html">Achievements</a>
+                    <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="">Achievements</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" href="">Builds</a>
@@ -487,7 +487,7 @@
             <a class="mask w-full h-[195px] py-2 rounded flex flex-col items-center justify-between group bg-medium-red hover:bg-light-red"
                 href="">
                 
-                <img class="" src="./img/online_icon_large.png" alt="">
+                <img class="" src="" alt="">
                 <span class="text-2xl text-slate-300 group-hover:text-yellow-400">Online</span>
             </a>
 
