--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </a>
 
         <!-- Nioh 3 Card -->
-        <a href="" class="group mask w-fit flex flex-col items-center bg-white border-2 border-black hover:border-sky-500">
+        <a href="./nioh3/nioh3.html" class="group mask w-fit flex flex-col items-center bg-white border-2 border-black hover:border-sky-500">
             <img src="./img/nioh3_card.png" alt="Nioh 2 card image">
             <span class="my-4 font-bold text-xl text-stone-700 group-hover:text-sky-500">Nioh 3 Wiki</span>
         </a>
