Updated content to nioh3.html, DOTSamurai_enemies, and DOTSamurai_missions .txt files.

--- a/nioh3/nioh3.html
+++ b/nioh3/nioh3.html
@@ -325,6 +325,10 @@
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
+                    href="">Arts Proficiency</a>
+                </li>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
                     href="">Living Artifact</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
