--- a/nioh3/nioh3.html
+++ b/nioh3/nioh3.html
@@ -386,7 +386,7 @@
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
-                    href="">Guardian Spirits</a>
+                    href="">Guardian Spirits / Spirit Force</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-gray-200 hover:text-yellow-400" 
