Updated text in achievements.html. Added a new image to hidden-tea-house/. Added more content to gestures, DOTSamurai_enemies, and DOTSamurai_missions .txt files.

--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -1201,8 +1201,8 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/dungball_roller.png" alt="Dungball Roller achievement">
                     </div></td>
                     <td>
-                        Became Ryunojo the Dung Lover's best friend and recieved the Coiled Snake Helmet Smithing Text. You can
-                        find Ryunojo the Dung Lover in the main mission: 
+                        Became <span class="text-sky-400 hover:text-sky-600" href="">Ryunojo the Dung Lover's</span> best friend 
+                        and recieved the Coiled Snake Helmet Smithing Text. You can find Ryunojo the Dung Lover in the main mission: 
                         <a class="text-sky-400 hover:text-sky-600" href="">Bird In A Cage</a> in the Shadow Region (3rd Region). 
                         You need to give him 30 Dungballs to obtain this achievement. Noble Dungball count as 2 normal Dungballs. 
                         You can view the video guide 
@@ -1696,8 +1696,8 @@
                             <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/honoring_the_dead.png" alt="Honoring the Dead achievement">
                         </div></td>
                         <td>
-                            Collected all of Kukai's brushes in the sub mission: 
-                            <a class="text-sky-400 hover:text-sky-600" href="">Words of Respite</a>.
+                            Collected all of <span class="text-sky-400 hover:text-sky-600" href="">Kukai's</span> brushes in the sub mission: 
+                            <a class="text-sky-400 hover:text-sky-600" href="">Words of Respite</a>. There are a total of 4.
                         </td>
                     </tr>
 
