Updated content in achievements.html.

--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -260,14 +260,14 @@
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 Nioh 2 has a total of: 88 achievements / trophies split into 81 Bronze, 5 Silver, 1 Gold, and 1 Platinum trophy.
-                There are a few achievements that require the player to continue past New Game. The achievement "Way of the 
+                There is 1 achievement that requires the player to continue past New Game. The achievement "Way of the 
                 Vanquisher" requires the player to reach Dream of the Demon (NG+2). The remaining 87 achievements can be 
-                completed on NG and NG +1. It is recommended to continue playing past NG instead of farming / griding on NG. By 
-                playing the game past NG most if not all achievements will be unlocked. Below is a table containing all of the 
-                achievements, in the order of easiest to acquire to the hardest to acquire. <br><br>
+                completed on Dream of the Samurai (NG) or Dream of the Strong (NG +1) difficulty. It is recommended to continue 
+                playing past NG instead of farming / griding on NG. By playing the game past NG most if not all achievements will
+                be unlocked. Below is a table containing all of the achievements. <br><br>
                 
-                Order of achievements and the data for the guide comes from PYJAMADS' Nioh 2 - 100% completion guide, and 
-                Phantom2654's Nioh 2 Trophy Guide which can be found 
+                Order of achievements and the data for specific guides comes from PYJAMADS' Nioh 2 - 100% completion guide, and 
+                Phantom2654's Nioh 2 Trophy Guide; which can be found 
                 <a class="text-sky-400 hover:text-sky-600" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2396261202">here</a> and 
                 <a class="text-sky-400 hover:text-sky-600" href="https://psnprofiles.com/guide/10138-nioh-2-trophy-guide">here</a>.
             </p>
