Added revenant-picture-scroll.png in picture_scrolls/img/. Completed the section on revenants with picture scrolls in picture_scrolls.html. Added more content to DOTStrong_enemies.txt.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -272,26 +272,30 @@
                 <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#c3d4e2] to-[#768192]">Silver Rarity</span>
                 similar to Tea Utensils.
             </p>
+            <!-- picture scroll drop image -->
             <div class="flex flex-col items-center gap-3">
                 <img src="./img/picture_scroll_drop.png" alt="Picture Scroll drop">
                 <span class="italic text-slate-300 text-xl leading-relaxed text-center">A Scroll of the Damned drop in the Depths of the Underworld</span>
             </div>
-
+            <!-- picture scroll attributes -->
             <div class="flex flex-col items-center gap-3">
                 <img src="./img/picture_scroll_full.png" alt="Full Picture Scroll Accessory">
-                <span class="italic text-slate-300 text-xl leading-relaxed text-center">A Scroll of the Damned with the maximum number of attributes (6)</span>
+                <span class="italic text-slate-300 text-xl leading-relaxed text-center">
+                    A Scroll of the Damned with the maximum number of attributes (6), equipped on the player
+                </span>
             </div>
+
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="text-red-600 font-bold">How to acquire Demon Parade Picture Scrolls?</span> The player must complete 
                 Dream of the Samurai (New Game) in order to have the chance at obtaining Picture Scrolls. Upon defeating enemies 
                 and bosses there is a random chance that a Picture Scroll for that specific difficulty will drop. Picture Scrolls 
                 can also be "farmed" off of Revenants. Not all Revenants can drop Picture Scrolls, only specific Revenants have the
-                chance to drop a Picture Scroll. Picture Scroll Revenants have a white glow on their graves: 
-                
-                <!-- !!!!!!!!!! !!!!!!!!!! !!!!!!!!!! -->
-                <span class="text-green-500">!!! TODO: [Picture of Revenant grave that has a picture scroll]: !!!</span>
-                <!-- !!!!!!!!!! !!!!!!!!!! !!!!!!!!!! -->
+                chance to drop a Picture Scroll. Picture Scroll Revenants have a white glow on their graves:
             </p>
+            <div class="flex flex-col items-center gap-3">
+                <img src="./img/revenant-picture-scroll.png" alt="Revenant that contains a Picture Scroll">
+                <span class="italic text-slate-300 text-xl leading-relaxed text-center">A Revenant Grave that contains a Picture Scroll</span>
+            </div>
 
             <!-- ==========
             Running Demon Parade Picture Scrolls
