--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -290,9 +290,11 @@
                 Dream of the Samurai (New Game) in order to have the chance at obtaining Picture Scrolls. Upon defeating enemies 
                 and bosses there is a random chance that a Picture Scroll for that specific difficulty will drop. Picture Scrolls 
                 can also be "farmed" off of Revenants. Not all Revenants can drop Picture Scrolls, only specific Revenants have the
-                chance to drop a Picture Scroll. Picture Scroll Revenants have a white glow on their graves:
+                chance to drop a Picture Scroll. Picture Scroll Revenants have a white glow on their graves, and have the following
+                icon when looking at the grave:
             </p>
             <div class="flex flex-col items-center gap-3">
+                <img src="./img/revenant-picture-scroll-icon.png" alt="">
                 <img src="./img/revenant-picture-scroll.png" alt="Revenant that contains a Picture Scroll">
                 <span class="italic text-slate-300 text-xl leading-relaxed text-center">A Revenant Grave that contains a Picture Scroll</span>
             </div>
