Updated the picture scroll drop image in picture_scrolls.html.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -275,7 +275,7 @@
             <!-- picture scroll drop image -->
             <div class="flex flex-col items-center gap-3">
                 <img src="./img/picture_scroll_drop.png" alt="Picture Scroll drop">
-                <span class="italic text-slate-300 text-xl leading-relaxed text-center">A Scroll of the Damned drop in the Depths of the Underworld</span>
+                <span class="italic text-slate-300 text-xl leading-relaxed text-center">A Demon Parade Picture Scroll drop</span>
             </div>
             <!-- picture scroll attributes -->
             <div class="flex flex-col items-center gap-3">
