Updated information in armor_texts and weapon_texts .html files for smithing texts.

--- a/nioh2/tools/smithing_texts/armor_texts.html
+++ b/nioh2/tools/smithing_texts/armor_texts.html
@@ -1366,7 +1366,7 @@
 	
 					<!-- Red Demon Armor -->
 					<tr class="bg-dark-gray-2">
-						<td rowspan="3">Red Demon Armor</td>
+						<td rowspan="4">Red Demon Armor</td>
 						<td>
 							<a class="text-sky-400 hover:text-sky-600" href="">Kasha</a>
 						</td>
@@ -1374,6 +1374,14 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">The Frenzied Blaze</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">The Golden Castle</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Defiled Sanctuary (Twilight Mission)</a>
+						</td>
+					</tr>
+					<tr class="bg-dark-gray-2">
+						<td>
+							<a class="text-sky-400 hover:text-sky-600" href="">Daidara Bocchi</a>
+						</td>
+						<td>
+							<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
 						</td>
 					</tr>
 					<tr class="bg-dark-gray-2">
@@ -1642,12 +1650,23 @@
 	
 					<!-- Warrior of the West Armor -->
 					<tr class="bg-dark-gray-2">
-						<td>Warrior of the West Armor</td>
+						<td rowspan="2">Warrior of the West Armor</td>
 						<td>
 							<a class="text-sky-400 hover:text-sky-600" href="">Daidara Bocchi</a>
 						</td>
 						<td>
 							<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+						</td>
+					</tr>
+					<tr class="bg-dark-gray-2">
+						<td>
+							<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+						</td>
+						<td>
+							<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
 						</td>
 					</tr>
 	
