--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -804,7 +804,15 @@
 
 					<!-- Wave Swimmer -->
 					<tr class="bg-dark-gray-2">
-						<td>Wave Swimmer</td>
+						<td rowspan="2">Wave Swimmer</td>
+						<td>
+							<a class="text-sky-400 hover:text-sky-600" href="">Daidara Bocchi</a>
+						</td>
+						<td>
+							<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+						</td>
+					</tr>
+					<tr class="bg-dark-gray-2">
 						<td>
 							<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
 						</td>
