Updated content in achievements.html.

--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -826,7 +826,9 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/sword_master.png" alt="Sword Master achievement">
                     </div></td>
                     <td>
-                        Acquired a Mystic Art for the Sword.
+                        Acquired a Mystic Art for the Sword. Complete the Dojo Mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Opening of the Mind's Eye</a>, 
+                        and unlock one of the Mystic Arts in the Sword Skill Tree.
                     </td>
                 </tr>
 
@@ -837,7 +839,9 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/dual_sword_master.png" alt="Dual Sword Master achievement">
                     </div></td>
                     <td>
-                        Acquired a Mystic Art for the Dual Swords.
+                        Acquired a Mystic Art for the Dual Swords. Complete the Dojo Mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Master of the Dual Blades</a>, 
+                        and unlock one of the Mystic Arts in the Dual Swords Skill Tree.
                     </td>
                 </tr>
 
@@ -848,7 +852,9 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/spear_master.png" alt="Spear Master achievement">
                     </div></td>
                     <td>
-                        Acquired a Mystic Art for the Spear.
+                        Acquired a Mystic Art for the Spear. Complete the Dojo Mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Hanzo the Demon</a>, 
+                        and unlock one of the Mystic Arts in the Spear Skill Tree.
                     </td>
                 </tr>
 
@@ -859,7 +865,9 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/axe_master.png" alt="Axe Master achievement">
                     </div></td>
                     <td>
-                        Acquired a Mystic Art for the Axe.
+                        Acquired a Mystic Art for the Axe. Complete the Dojo Mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Unmoving Mountain</a>, 
+                        and unlock one of the Mystic Arts in the Axe Skill Tree.
                     </td>
                 </tr>
 
@@ -870,7 +878,9 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/kusarigama_master.png" alt="Kusarigama Master achievement">
                     </div></td>
                     <td>
-                        Acquired a Mystic Art for the Kusarigama.
+                        Acquired a Mystic Art for the Kusarigama. Complete the Dojo Mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Chain That Splits the Sky</a>, 
+                        and unlock one of the Mystic Arts in the Kusarigama Skill Tree.
                     </td>
                 </tr>
 
@@ -881,7 +891,9 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/odachi_master.png" alt="Odachi Master achievement">
                     </div></td>
                     <td>
-                        Acquired a Mystic Art for the Odachi.
+                        Acquired a Mystic Art for the Odachi. Complete the Dojo Mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Tengu's Blade</a>, 
+                        and unlock one of the Mystic Arts in the Odachi Skill Tree.
                     </td>
                 </tr>
 
@@ -892,7 +904,9 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/tonfa_master.png" alt="Tonfa Master achievement">
                     </div></td>
                     <td>
-                        Acquired a Mystic Art for the Tonfa.
+                        Acquired a Mystic Art for the Tonfa. Complete the Dojo Mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Like Lightning</a>, 
+                        and unlock one of the Mystic Arts in the Tonfa Skill Tree.
                     </td>
                 </tr>
 
@@ -903,7 +917,9 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/hatchet_master.png" alt="Hatchet Master achievement">
                     </div></td>
                     <td>
-                        Acquired a Mystic Art for the Hatchet.
+                        Acquired a Mystic Art for the Hatchet. Complete the Dojo Mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Unstoppable Whirlwind</a>, 
+                        and unlock one of the Mystic Arts in the Hatchet Skill Tree.
                     </td>
                 </tr>
 
@@ -914,7 +930,9 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/switchglaive_master.png" alt="Switchglaive Master achievement">
                     </div></td>
                     <td>
-                        Acquired a Mystic Art for the Switchglaive.
+                        Acquired a Mystic Art for the Switchglaive. Complete the Dojo Mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Sharp Eyes</a>, 
+                        and unlock one of the Mystic Arts in the Switchglaive Skill Tree.
                     </td>
                 </tr>
 
@@ -925,7 +943,9 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/splitstaff_master.png" alt="Splitstaff Master achievement">
                     </div></td>
                     <td>
-                        Acquired a Mystic Art for the Splitstaff.
+                        Acquired a Mystic Art for the Splitstaff. Complete the Dojo Mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Breaking Free</a>, 
+                        and unlock one of the Mystic Arts in the Splitstaff Skill Tree.
                     </td>
                 </tr>
 
@@ -936,7 +956,9 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/fist_master.png" alt="Fist Master achievement">
                     </div></td>
                     <td>
-                        Acquired a Mystic Art for the Fist.
+                        Acquired a Mystic Art for the Fist. Complete the Dojo Mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Strike Like A Yokai</a>, 
+                        and unlock one of the Mystic Arts in the Fists Skill Tree.
                     </td>
                 </tr>
 
@@ -947,7 +969,9 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/ninjutsu_master.png" alt="Ninjutsu Master achievement">
                     </div></td>
                     <td>
-                        Acquired a Mystic Art for Ninjutsu.
+                        Acquired a Mystic Art for Ninjutsu. Complete the Dojo Mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">The One Who Lives in the Shadows</a>, 
+                        and unlock one of the Mystic Arts in the Ninjutsu Skill Tree.
                     </td>
                 </tr>
 
@@ -958,7 +982,9 @@
                         <img loading="lazy" class="w-[96px] h-[96px] object-contain" src="./img/onmyo_magic_master.png" alt="Onmyo Magic Master achievement">
                     </div></td>
                     <td>
-                        Acquired a Mystic Art for Onmyo Magic.
+                        Acquired a Mystic Art for Onmyo Magic. Complete the Dojo Mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Nine Symbols</a>, 
+                        and unlock one of the Mystic Arts in the Onmyo Magic Skill Tree.
                     </td>
                 </tr>
 
