Updated content in guardian_spirits.html.

--- a/nioh2/equipment/guardian_spirits/guardian_spirits.html
+++ b/nioh2/equipment/guardian_spirits/guardian_spirits.html
@@ -263,9 +263,29 @@
                 <span class="text-red-600">Brute type</span> <img class="inline" src="./img/brute_logo.png" alt="Brute icon">.
                 14 Spirits of the <span class="text-purple-500">Phantom type</span>
                 <img class="inline" src="./img/phantom_logo.png" alt="Phantom icon">. And 12 Spirits of the 
-                <span class="text-blue-500">Feral type</span> <img class="inline" src="./img/feral_logo.png" alt="Feral icon">.
+                <span class="text-blue-500">Feral type</span> <img class="inline" src="./img/feral_logo.png" alt="Feral icon">. 
+                
+                <br><br>
+                The Tengu's Disciple (DLC 1) contains 3 Guardian Spirits:
+                <a class="text-sky-400 hover:text-sky-600" href="">Kurama Tengu</a>,
+                <a class="text-sky-400 hover:text-sky-600" href="">Ho</a>, and
+                <a class="text-sky-400 hover:text-sky-600" href="">Blue Dragon</a>.
+                <br>
+                Darkness In The Capital (DLC 2) contains 4 Guardian Spirits:
+                <a class="text-sky-400 hover:text-sky-600" href="">Kuzunoha The Fox</a>,
+                <a class="text-sky-400 hover:text-sky-600" href="">Oh</a>,
+                <a class="text-sky-400 hover:text-sky-600" href="">Ho-Oh</a>, and
+                <a class="text-sky-400 hover:text-sky-600" href="">Janomecho</a>.
+                <br>
+                The First Samurai (DLC 3) contains 4 Guardian Spirits: <a class="text-sky-400 hover:text-sky-600" href="">Sohaya</a>,
+                <a class="text-sky-400 hover:text-sky-600" href="">Baku</a>,
+                <a class="text-sky-400 hover:text-sky-600" href="">Suzaku</a>, and
+                <a class="text-sky-400 hover:text-sky-600" href="">Amabie</a>.
+                <br> All other Guardian Spirits can be obtained in the base game.
+                
+                <br><br>
                 The player selects their first Guardian Spirit during the tutorial, after Character Creation. The player recieves
-                their second Guardian Spirit after completing the Main Mission 
+                their second Guardian Spirit after completing the Main Mission:
                 <a class="text-sky-400 hover:text-sky-600" href="">The Hollow Fortress</a>. When a player switches over to a
                 Guardian Spirit during gameplay that Spirit becomes the Primary Guardian Spirit, and the other Guardian Spirit 
                 becomes the Secondary Guardian Spirit. Below is a list of all of the Guardian Spirits and their attributes. You 
