Fixed a spelling mistake in misc_texts.html.

--- a/nioh2/tools/smithing_texts/misc_texts.html
+++ b/nioh2/tools/smithing_texts/misc_texts.html
@@ -293,9 +293,9 @@
 
 
     <!-- ========== ========== ========== ========== ==========
-    Armor Set Smithing Texts
+    Miscellaneous Item Smithing Texts
     ========== ========== ========== ========== ========== -->
-    <section id="armor-set" class="w-full my-12 lg:px-0 flex flex-col items-center">
+    <section id="misc-text" class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
             2xl:max-w-section-width lg:px-16">
 
@@ -449,9 +449,9 @@
                             <a class="text-sky-400 hover:text-sky-600" href="">Hundred Night Incense</a>
                         </td>
                         <td>
-                            <span>Max all Blessings in the Blessings The Departed table</span><br><br>
+                            <span>Max all Blessings in the Blessings of the Departed Table.</span><br><br>
                             <span>
-                                You can view the full Blessings of the Departed table
+                                You can view the full Blessings of the Departed Table
                                 <a 
                                     class="text-sky-400 hover:text-sky-600" 
                                     href="https://liukang1080.github.io/gamewiki/nioh2/world/underworld/lapis/lapis.html"
