Added more links for a mission in hidden_skills.html.

--- a/nioh2/tools/smithing_texts/hidden_skills.html
+++ b/nioh2/tools/smithing_texts/hidden_skills.html
@@ -399,6 +399,7 @@
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Bird In A Cage</a><br><br>
                         <a class="text-sky-400 hover:text-sky-600" href="">The Cursed Ruins (Twilight Mission)</a>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Yaksha Returns</a>
                     </td>
                 </tr>
 
