Added more content to armor_texts.html.

--- a/nioh2/tools/smithing_texts/armor_texts.html
+++ b/nioh2/tools/smithing_texts/armor_texts.html
@@ -1052,7 +1052,7 @@
 	
 					<!-- Kingo's Armor -->
 					<tr class="">
-						<td rowspan="2">Kingo's Armor</td>
+						<td rowspan="3">Kingo's Armor</td>
 						<td>
 							<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
 						</td>
@@ -1066,6 +1066,17 @@
 						</td>
 						<td>
 							<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+						</td>
+						<td>
+							<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
 						</td>
 					</tr>
 	
