Updated video links in achievements.html.

--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -504,7 +504,7 @@
                     <td>
                         Destroyed every large Amrita Crystal in the main mission: <a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>.
                         There are a total of 6 large Amrita Crystals. You can view the guide 
-                        <a class="text-sky-400 hover:text-sky-600" href="https://www.youtube.com/watch?v=HDEjiCjNWD0" target="_blank" rel="noopener noreferrer">here</a>.
+                        <a class="text-sky-400 hover:text-sky-600" href="https://www.youtube.com/watch?v=lf336WMJ9OU" target="_blank" rel="noopener noreferrer">here</a>.
                     </td>
                 </tr>
 
